--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="container">
             <div class="row">
                 <div id="score" class="col-md-offset-2 col-md-3 text-center">
-                    <div id="gameScore" class="h3" ng-bind="'Score:' + match.score"></div>
+                    <div id="gameScore" class="h2 alert alert-success" ng-bind="'Score:' + match.score"></div>
                 </div>
                 <div class="col-md-2 text-center">
-                    <button id="resetButton" type="button" class="btn btn-primary btn-lg" ng-click="match.reset()">Reset</button>
+                    <button id="resetButton" type="button" class="btn btn-primary btn-lg h2" ng-click="match.reset()">Reset</button>
                 </div>
                 <div class="col-md-3 text-center">
-                    <div id="message" class="h4 alert alert-info" ng-show="match.message.length > 0" ng-bind="match.message"></div>
+                    <div id="message" class="h2 alert alert-info" ng-show="match.message.length > 0" ng-bind="match.message"></div>
                 </div>
             </div>
             <div class="row">
